--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">CMPUT301Project</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="searchText">Quick search recipes</string>
+    <string name="advancedSearchCheck">Only use available ingrediants</string>
+    <string name="recipes">My Recipes</string>
+    <string name="pantry">My Pantry</string>
+    
 
 </resources>
