Spell Checking everything ingrediant -> ingredient... Kyle...

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="advancedSearchCheck">Only use available ingrediants</string>
     <string name="recipes">My Recipes</string>
     <string name="pantry">My Pantry</string>
-    
+    <string name="title_activity_my_pantry">MyPantryActivity</string>
 
 </resources>
