Long story short I created the "My Pantry" and the "My Recipe" Views. These are linked to the main menu now... had to relook-up how to do this... oh well

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -2,13 +2,13 @@
 <resources>
 
     <string name="app_name">CMPUT301Project</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="searchText">Quick search recipes(NOT IMPLIMENTED)</string>
-    <string name="inPantrySearchCheck">Only use available ingrediants(NOT IMPLIMENTED)</string>
-    <string name="localSearchText">Only search in My Recipes (NOT IMPLIMENTED)</string>
+    <string name="searchText">Quick search recipes (NI)</string>
+    <string name="inPantrySearchCheck">Only use available ingrediants (NI)</string>
+    <string name="localSearchText">Only search in My Recipes (NI)</string>
     <string name="recipes">My Recipes</string>
     <string name="pantry">My Pantry</string>
-    <string name="title_activity_my_pantry">MyPantryActivity</string>
+    <string name="title_activity_my_pantry_view">My Pantry</string>
+    <string name="title_activity_my_recipes_view">My Recipes</string>
 
 </resources>
