--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -12,7 +12,10 @@
     <string name="title_activity_my_recipes_view">My Recipes</string>
     <string name="my_pantry_add_button">Add Ingredient</string>
     <string name="create_recipe">Create New Recipe</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_add_new_ingredient">AddNewIngredient</string>
+    <string name="addNewIngredientStringName">Name</string>
+    <string name="addNewIngredientStringQuantity">Quantity</string>
+    <string name="addNewIngredientStringDescription">Description</string>
+    <string name="addNewIngredientButtonString">Done</string>
 
 </resources>
