--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_my_recipes_view">My Recipes</string>
     <string name="my_pantry_add_button">Add Ingredient</string>
     <string name="create_recipe">Create New Recipe</string>
+    <string name="title_activity_create_recipe_view">Create Recipe</string>
 
 </resources>
