Added view to the create new Recipe view

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="createNewRecipe_title_section2">Ingredients</string>
     <string name="createNewRecipe_title_section1">Description</string>
     <string name="title_activity_create_new_recipe_view">CreateNewRecipeView</string>
+    <string name="addNewRecipeInstructionAddButton">Add</string>
 
 </resources>
