--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -32,5 +32,7 @@
     <string name="addNewRecipeInstructionAddButton">Add Instruction</string>
     <string name="cancelButton">Cancel</string>
     <string name="addNewRecipeInstructionDialogString">Add New Instruction</string>
+    <string name="buttonDelete">Delete</string>
+    <string name="addNewInstructionButtonString">Add Instruction</string>
 
 </resources>
