I got the view recipe view to appear but the tabs are not populating yet.

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="addNewRecipeInstructionDialogString">Add New Instruction</string>
     <string name="buttonDelete">Delete</string>
     <string name="addNewInstructionButtonString">Add Instruction</string>
+     <string name="MainMenuSearchButtonString">Search Recipe</string>
 
 </resources>
