--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -36,5 +36,12 @@
     <string name="modify">Edit</string>
     <string name="title_activity_view_recipe_view">Recipe</string>
     <string name="title_activity_edit_recipe_view">Edit Recipe</string>
+    <string name="mySharing">My Sharing</string>
+    <string name="publishRecipe">Publish Recipe</string>
+    <string name="title_activity_my_sharing_view">MySharing</string>
+    <string name="title_activity_publish_recipe_view">Publish Recipe</string>
+    <string name="viewRecipesOnWeb">View Recipes On Web</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_recipes_on_web_view">Recipes On Web</string>
 
 </resources>
