Set up emails working pretty easy so far damn I jinxed it

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -43,5 +43,8 @@
     <string name="viewRecipesOnWeb">View Recipes On Web</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_recipes_on_web_view">Recipes On Web</string>
+    <string name="email">Email</string>
+    <string name="upload">Upload</string>
+    <string name="share">Share</string>
 
 </resources>
