--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="email">Email</string>
     <string name="upload">Upload</string>
     <string name="share">Share</string>
-
+    <string name="ReadRecipeExtensionViewDownload">Add to MyRecipes</string>
+	<string name="title_activity_read_recipe_extension_view" >Recipe Importer</string>
 </resources>
