--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CMPUT301Project</string>
+    <string name="app_name">My Cookbook</string>
     <string name="menu_settings">Settings</string>
     <string name="search_text">Quick search recipes (NI)</string>
     <string name="in_pantry_search_check">Only use available ingrediants (NI)</string>
