--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -3,9 +3,8 @@
 
     <string name="app_name">My Cookbook</string>
     <string name="menu_settings">Settings</string>
-    <string name="search_text">Quick search recipes (NI)</string>
-    <string name="in_pantry_search_check">Only use available ingrediants (NI)</string>
-    <string name="local_search_text">Only search in My Recipes (NI)</string>
+    <string name="search_text">Quick search recipes</string>
+    <string name="in_pantry_search_check">Only use available ingrediants</string>
     <string name="recipes">My Recipes</string>
     <string name="pantry">My Pantry</string>
     <string name="my_pantry_add_button">Add Ingredient</string>
