Editing the UI graphically

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="querytext2view">Query Recipes (Locally)</string>
     <string name="selectNewPicButton"> Select From Library</string>
     <string name="takeNewPicButton">Take a Picture</string>
+    <string name="image">image</string>
 
 </resources>
