Error checking for ingredient done displays error message when blank name or quantity is given.

--- a/CMPUT301Project/res/values/strings.xml
+++ b/CMPUT301Project/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="selectNewPicButton"> Select From Library</string>
     <string name="takeNewPicButton">Take a Picture</string>
     <string name="image">image</string>
+    <string name="Error:">Error: Blank quantity value or name</string>
+    <string name="Ok">Ok</string>
 
 </resources>
